--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-
+<!doctype html>
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width" />
   <title>RailsTemplate</title>
 
-  <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
-  <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
+  <%= stylesheet_link_tag    'application' %>
+  <%= javascript_include_tag 'application' %>
 
-  <%= stylesheet_link_tag  "application" %>
   <%= csrf_meta_tags %>
-
-  <!-- script src="js/vendor/custom.modernizr.js"></script -->
 
 </head>
 <body>
@@ -38,8 +34,11 @@
     </div>
   </section>
 
-  <footer id="footer"><%= yield :footer %></footer>
-  <%= javascript_include_tag "application" %>
+  <footer id="footer">
+    <%= yield :footer %>
+  </footer>
+
+
   <script>
     //$(document).foundation();
   </script>
