--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header id="header">
-  <div class="row">
+  <div class="container">
     <div class="large-12 columns" id="header-content">
       <% if content_for? :header %>
         <%= yield :header %>
