--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en" class="h-100">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -12,7 +12,7 @@
   <%= csrf_meta_tags %>
 
 </head>
-<body>
+<body class="d-flex flex-column h-100">
   <div id="flash-messages">
     <% if notice %>
       <p class="notice alert-box"><%= notice %></p>
@@ -27,20 +27,13 @@
   <%= render 'layouts/header' %>
 
   <section id="main" role="main">
-    <div class="row">
+    <div class="container">
       <div class="large-12 columns">
         <%= yield %>
       </div>
     </div>
   </section>
 
-  <footer id="footer">
-    <%= yield :footer %>
-  </footer>
-
-
-  <script>
-    //$(document).foundation();
-  </script>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
